# boltffi

./: .gitignore  BOLTFFI_TOML_SPEC.md  Cargo.toml  KMP_SUPPORT_ROADMAP.md  README.md  justfile
boltffi_backend/: Cargo.toml
boltffi_backend/fixtures/: c_bridge_declaration_surface.h
boltffi_backend/src/: bridge.rs  capability.rs  error.rs  host.rs  lib.rs  output.rs  sealed.rs  target.rs
boltffi_backend/src/bridge/: mod.rs
boltffi_backend/src/core/: bridge.rs  capabilities.rs  context.rs  contract.rs  coverage.rs  custom_types_mapping.rs  error.rs  files.rs  host.rs  mod.rs  syntax.rs  target.rs
boltffi_backend/tests/: csharp.rs  java.rs  java_runtime.rs  jni.rs  kotlin.rs  swift.rs
boltffi_backend/tests/java_toolchain/: mod.rs
boltffi_backend/tests/jni/: associated.rs  callback.rs  callback_return.rs  constant.rs  direct_vector.rs  native_methods.rs  stream.rs
boltffi_backend/tests/kotlin/: callback.rs  direct_vector.rs  exports.rs  stream.rs
boltffi_backend/tests/snapshots/: java__java_direct_record_stack.snap  java__java_target_renders_primitive_function_stack.snap  swift__swift_target_allocates_scoped_optional_initializer_locals.snap  swift__swift_target_emits_wire_runtime_once.snap  swift__swift_target_passes_mutable_primitive_slices_inout.snap  swift__swift_target_passes_primitive_direct_vectors.snap  swift__swift_target_passes_record_direct_vectors.snap  swift__swift_target_renders_async_callback_handle_returns.snap  swift__swift_target_renders_async_callback_return_shapes.snap  swift__swift_target_renders_async_class_methods.snap  swift__swift_target_renders_async_complete_return_shapes.snap  swift__swift_target_renders_builtin_values_through_shared_codec.snap  swift__swift_target_renders_callback_direct_result_returns.snap  swift__swift_target_renders_callback_direct_vectors.snap  swift__swift_target_renders_callback_encoded_parameters.snap  swift__swift_target_renders_callback_encoded_result_returns.snap  swift__swift_target_renders_callback_encoded_returns.snap  swift__swift_target_renders_callback_enum_parameters.snap  swift__swift_target_renders_callback_handle_closure_returns.snap  swift__swift_target_renders_callback_handle_parameters.snap  swift__swift_target_renders_callback_method_callback_handle_parameters.snap  swift__swift_target_renders_callback_method_callback_handle_returns.snap  swift__swift_target_renders_callback_optional_scalar_parameters.snap  swift__swift_target_renders_callback_optional_scalar_returns.snap  swift__swift_target_renders_callback_record_parameters.snap  swift__swift_target_renders_callback_record_returns.snap  swift__swift_target_renders_class_handles_and_methods.snap  swift__swift_target_renders_closure_parameters.snap  swift__swift_target_renders_constants.snap  swift__swift_target_renders_custom_type_mappings.snap  (+24 more)
boltffi_backend/tests/source/: mod.rs
boltffi_binding/: Cargo.toml
boltffi_binding/src/: lib.rs
boltffi_macros/: Cargo.toml
boltffi_macros/src/: interned_string.rs  lib.rs
boltffi_macros/tests/: core_only_interned_string_pool.rs
boltffi_scan/: Cargo.toml
boltffi_scan/src/: attributes.rs  const_expr.rs  contract.rs  declared_types.rs  error.rs  function.rs  impl_target.rs  input.rs  lib.rs  marked.rs  marker.rs  name.rs  package_graph.rs  path.rs  record.rs  registry.rs  repr.rs  scan.rs  source_tree.rs  spelling.rs  ty.rs  type_expr.rs  unsupported.rs  visibility.rs
boltffi_tests/: Cargo.toml  build.rs
boltffi_tests/src/: asynchronous.rs  bytes.rs  callbacks.rs  classes.rs  closures.rs  collections.rs  constants.rs  contract.rs  customs.rs  enums.rs  lib.rs  options.rs  primitives.rs  quarantine.rs  records_direct.rs  records_encoded.rs  results.rs  streams.rs  strings.rs  vectors.rs
boltffi_tests/tests/: c_glue.rs  class_ffi.rs  crossing_behavior.rs  interned_string.rs  negative_scanner.rs  record_methods.rs  scan_to_bindings.rs  symbol_manifest.rs
(+1103 files in other folders)
