[package]
name = "boltffi_backend"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Backend rendering contracts for BoltFFI binding metadata"
keywords = ["ffi", "codegen", "backend", "bindings"]
categories = ["development-tools::ffi", "development-tools::build-utils"]

[dependencies]
boltffi_binding.workspace = true
thiserror.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
